# checkers-rs

./: .gitignore  CLAUDE.md  CONTROLS_GUIDE.md  Cargo.toml  PROPOSAL.md  README.md  STATES.md  STATE_MACHINE_REFACTORING.md  design.md  fix1.md
.cargo/: config.toml
.github/workflows/: test.yml
agents/: ARCHITECTURE.md  CONTROLS.md
src/: ai.rs  application.rs  board.rs  game.rs  game_logic.rs  input.rs  lib.rs  main.rs  markdown_renderer.rs  messages.rs  piece.rs  ui.rs
src/ai/: client.rs  error.rs  formatting.rs  gemini_client.rs  genai_client.rs  hint.rs  implementation.rs  mod.rs  models.rs  ui.rs
src/core/: board.rs  game.rs  game_logic.rs  mod.rs  move_history.rs  piece.rs
src/interface/: input.rs  messages.rs  mod.rs  theme.rs  ui.rs  ui_ratatui.rs  welcome_screen.rs
src/markdown/: mod.rs  parser.rs  style.rs
src/prompts/: story.txt
src/state/: ai_state.rs  game_session.rs  machine.rs  mod.rs  transition.rs  ui_state.rs  view_data.rs
src/utils/: mod.rs
states/: after_move_with_hint_state.txt  initial_board_state.txt  welcome_state.txt
tests/: ai_debug_output_test.rs  auto_hint_update_test.rs  board_debug_test.rs  board_test.rs  coordinate_format_test.rs  deselection_test.rs  game_logic_test.rs  game_test.rs  hint_test.rs  main_test.rs  markdown_renderer_test.rs  markdown_test.rs  mod.rs  piece_test.rs  stalemate_winner_test.rs  state_tests.rs  two_player_mode_test.rs  white_wins_test.rs  winner_test.rs
tests/ai/: gemini_client_test.rs
tests/core/: board_test.rs  game_logic_test.rs  game_test.rs  mod.rs  piece_test.rs
tests/state/: mod.rs  (+7 more)
(+32 files in other folders)
