[package]
name = "checkers-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A terminal-based Checkers game with arrow key navigation"

[lib]
name = "checkers_rs"
path = "src/lib.rs"

[[bin]]
name = "checkers-rs"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
thiserror = "1.0"
ctrlc = "3.4"
libc = "0.2"
genai = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"

[dev-dependencies]
serial_test = "3.0"
